# GraphSet

./: .clang-format  .gitignore  CMakeLists.txt  README-1.md  README.md  compile_flags.txt  env.sh  gpu_clique_pivoting.cu  gpu_kclique_orientation.cu  run-iep.sh  spack-env.sh  test.py  test1.py  test2.py  test_graph.g  version0805_house.cu
auto/: CMakeLists.txt  after_inj.cu  auto.cu  before_inj.cu  concat.sh  concat_motif_test.sh  cs_motif_test5_inject.cu  cs_motif_test7_inject.cu  cs_p2.cu  cs_p4.cu  cs_p4_inject.cu  generated_main.cu  livejournal_p1_main.cu  livejournal_p3.cu  livejournal_p3_main.cu  livejournal_p4.cu  livejournal_p5.cu  lj_p1_inject.cu  lj_p2.cu  lj_p2_inject  lj_p2_inject.cu  lj_p3.cu  lj_p3_inject.cu  lj_p4.cu  lj_p4_inject.cu  lj_p5.cu  lj_p5_inject  lj_p5_inject.cu  lj_p6.cu  lj_p6_inject  lj_p6_inject.cu  lj_p7.cu  mc_motif_test2.cu  mc_motif_test4_inject.cu  mc_p1.cu  mc_p1_inject.cu  mc_p2.cu  mc_p2_inject.cu  mc_p3.cu  mc_p3_inject.cu  (+68 more)
code_gen/: CMakeLists.txt  code_generator.cu  final_generator.cu
cpu-iep/: node1.sh  node2.sh  node3.sh  node4.sh  run-iep.sh
cpu-motifs-iep/: node1.sh  node3.sh
cpu-motifs-without-iep/: node2.sh  run.sh
cpu-without-iep/: node1.sh  node10.sh  node11.sh  node12.sh  node2.sh  node3.sh  node4.sh  node5.sh  node6.sh  node7.sh  node8.sh  node9.sh  run-without-iep.sh
dataset/: wiki-vote.g
gpu/: CMakeLists.txt  _debug.cu  check.cu  common.cuh  fsm_mixed.cu  gpu_bitvector.cuh  gpu_clique.cu  gpu_const.cuh  gpu_fsm.cu  gpu_fsm_omp.cu  gpu_fsm_vertex_set.cuh  gpu_graph.cu  gpu_graph_cub.cu  gpu_graph_data_rearrange.cu  gpu_graph_mpi.cu  gpu_graph_naive_omp.cu  gpu_graph_old.cu  gpu_graph_omp.cu  gpu_graph_sanitized.cu  gpu_graph_static_task.cu  gpu_graph_unimem.cu  gpu_graph_with_timer.cu  gpu_house.cu  gpu_house_with_timer.cu  gpu_kclique.cu  gpu_mc.cu  gpu_new_fsm.cu  gpu_new_str.cu  gpu_schedule.cuh  gpu_support.cu  gpu_test.cu  gpu_test.cuh  gpu_test_intersect_1.cu  gpu_test_intersect_2.cu  gpu_test_intersect_3.cu  gpu_triangle.cu  intersection.cu  intersection.cuh  lj_p1.cu  lj_p1_old.cu  (+5 more)
gpu/component/: gpu_bitvector.cuh  gpu_const.cuh  gpu_device_context.cuh  gpu_device_detect.cuh  gpu_schedule.cuh  gpu_vertex_set.cuh  utils.cuh
gpu/function/: pattern_matching.cuh
gpu/src/: gpu_pattern_matching.cuh  gpu_pattern_matching_multidevices.cuh  gpu_pattern_matching_static_task.cuh
include/: common.h  communicator.h  dataloader.h  edges.h  embedding.h  graph.h  graph_d.h  labeled_graph.h  pattern.h  prefix.h  schedule.h  schedule_IEP.h  set_operation.hpp  task_queue.h  timeinterval.h  timeval.h  types.h  vertex_set.h
include/gpu/: config.cuh  set_ops.cuh  utils.cuh  vertex_set.cuh
performance-model/: node1.sh  node2.sh  node3.sh  patents_p1.log_2022-01-11T17:10:07+00:00  patents_p2.log_2022-01-11T17:12:22+00:00  patents_p3.log_2022-01-11T17:12:47+00:00  patents_p4.log_2022-01-11T17:13:23+00:00  run.sh  wiki-vote_p1.log_2022-01-11T17:08:33+00:00  wiki-vote_p2.log_2022-01-11T17:09:04+00:00  wiki-vote_p3.log_2022-01-11T17:09:12+00:00  wiki-vote_p4.log_2022-01-11T17:09:21+00:00
reproduce/: clique_counting.py  frequent_subgraph_mining.py  gsi_cuts.py  motif_counting.py  pattern_matching.py  reproduce_main.py  scalability.py  settings.py  utils.py
scripts/: analyze.py  check.py  clique_test.py  fsm_test.py  gen_code.py  gen_motifs_codes.py  generate.py  pm_test.py  run-motifs.py  run-performance-model.py  run.py  run.py     run_generated_code.py  run_generated_motif_test_code.py  runprof.sh  runtest.sh  small_graph_check.py  txt2adj.py
src/: CMakeLists.txt  clique_test.cpp  common.cpp  communicator.cpp  dataloader.cpp  embedding.cpp  fsm_test.cpp  fsm_vertex_test.cpp  graph.cpp  graph_d.cpp  graph_mining.cpp  kudu.cpp  labeled_graph.cpp  motif_counting_test.cpp  pattern.cpp  pattern_matching_test.cpp  pm_test.cpp  prefix.cpp  reduce_edge.cpp  schedule.cpp  schedule_IEP.cpp  set_operation.cpp  task_queue.cpp  vertex_set.cpp
test/: CMakeCache.txt  CMakeLists.txt  gpu_pattern_matching_test.cu  gpu_sample_test.cu  pattern_matching_test.cpp
tianhe/: CMakeLists.txt  all_schedule_test.cpp  baseline_test.cpp  calc_support_test.cpp  gen_motif.cpp  mc_ref.cc  motifs_test.cpp  schedules_our_generator_test.cpp  sigmod2020_test.cpp  triangle_test.cpp
