#ADD_EXECUTABLE(auto auto.cu)
#SET_PROPERTY(TARGET auto PROPERTY CUDA_SEPARABLE_COMPILATION ON)
#TARGET_LINK_LIBRARIES(auto graph_mining)

list(APPEND Graph "pt" "mc" "wv" "lj" "or")


FOREACH(G IN LISTS Graph)
    FOREACH(X RANGE 1 8) 

    ADD_EXECUTABLE(${G}_p${X} ${G}_p${X}.cu)
    SET_PROPERTY(TARGET ${G}_p${X} PROPERTY CUDA_SEPARABLE_COMPILATION ON)
    TARGET_LINK_LIBRARIES(${G}_p${X} graph_mining)

    ENDFOREACH()
ENDFOREACH()